k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tattooeddevv-portfolio
  labels:
    app: tattooeddevv-portfolio
spec:
  type: ClusterIP
  selector:
    app: tattooeddevv-portfolio
  ports:
    - name: http
      port: 80
      targetPort: 80
