k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tattooeddevv-portfolio
  annotations:
    # TODO: Update annotations for your ingress controller and TLS issuer.
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - tattooeddevv.io
        - www.tattooeddevv.io
      secretName: tattooeddevv-portfolio-tls
  rules:
    - host: tattooeddevv.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tattooeddevv-portfolio
                port:
                  number: 80
    - host: www.tattooeddevv.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tattooeddevv-portfolio
                port:
                  number: 80
